--- a/df_airbnb.ipynb
+++ b/df_airbnb.ipynb
@@ -6,7 +6,7 @@
       "name": "df_airbnb.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5SWR23gthflJW3z7jC7yn",
+      "authorship_tag": "ABX9TyNAkukd/bA2N05X0GGn2y/o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "npQYnIX1EaGR"
       },
@@ -68,7 +68,7 @@
         "id": "b6NsGd8zE19X",
         "outputId": "ae17cb24-c755-42f9-89ac-09f9c1e14eb2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
         "id": "PUTZ7yUVOP1h",
         "outputId": "93700469-caa9-47cc-9839-a10cd28056bf"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,6 +559,313 @@
     {
       "cell_type": "code",
       "source": [
+        "df_group = df_airbnb.groupby('neighbourhood').aggregate({\n",
+        "                                        'price':['mean','median','size']})\n",
+        "df_group.round()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 802
+        },
+        "id": "dqq0TF3DG25j",
+        "outputId": "ad1d8a62-ba05-4b3e-8bc3-da8a186c9eee"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                        price            \n",
+              "                                         mean median size\n",
+              "neighbourhood                                            \n",
+              "Bijlmer-Centrum                         169.0  110.0   33\n",
+              "Bijlmer-Oost                            128.0   90.0   19\n",
+              "Bos en Lommer                           137.0  122.0  248\n",
+              "Buitenveldert - Zuidas                  127.0  102.0   56\n",
+              "Centrum-Oost                            203.0  150.0  618\n",
+              "Centrum-West                            183.0  150.0  870\n",
+              "De Aker - Nieuw Sloten                  144.0   94.0   50\n",
+              "De Baarsjes - Oud-West                  161.0  140.0  803\n",
+              "De Pijp - Rivierenbuurt                 177.0  150.0  553\n",
+              "Gaasperdam - Driemond                    98.0   85.0   44\n",
+              "Geuzenveld - Slotermeer                 127.0  112.0   83\n",
+              "IJburg - Zeeburgereiland                178.0  142.0  160\n",
+              "Noord-Oost                              139.0  117.0   93\n",
+              "Noord-West                              129.0  122.0  136\n",
+              "Oostelijk Havengebied - Indische Buurt  142.0  125.0  205\n",
+              "Osdorp                                  124.0  100.0   36\n",
+              "Oud-Noord                               180.0  129.0  251\n",
+              "Oud-Oost                                156.0  140.0  313\n",
+              "Slotervaart                             111.0   99.0  101\n",
+              "Watergraafsmeer                         165.0  150.0  147\n",
+              "Westerpark                              162.0  135.0  371\n",
+              "Zuid                                    187.0  150.0  366"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-21fc469a-f28f-4222-849c-5e70aa22a129\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr th {\n",
+              "        text-align: left;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr:last-of-type th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th colspan=\"3\" halign=\"left\">price</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th>mean</th>\n",
+              "      <th>median</th>\n",
+              "      <th>size</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>neighbourhood</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Bijlmer-Centrum</th>\n",
+              "      <td>169.0</td>\n",
+              "      <td>110.0</td>\n",
+              "      <td>33</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Bijlmer-Oost</th>\n",
+              "      <td>128.0</td>\n",
+              "      <td>90.0</td>\n",
+              "      <td>19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Bos en Lommer</th>\n",
+              "      <td>137.0</td>\n",
+              "      <td>122.0</td>\n",
+              "      <td>248</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Buitenveldert - Zuidas</th>\n",
+              "      <td>127.0</td>\n",
+              "      <td>102.0</td>\n",
+              "      <td>56</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Centrum-Oost</th>\n",
+              "      <td>203.0</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>618</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Centrum-West</th>\n",
+              "      <td>183.0</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>870</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>De Aker - Nieuw Sloten</th>\n",
+              "      <td>144.0</td>\n",
+              "      <td>94.0</td>\n",
+              "      <td>50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>De Baarsjes - Oud-West</th>\n",
+              "      <td>161.0</td>\n",
+              "      <td>140.0</td>\n",
+              "      <td>803</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>De Pijp - Rivierenbuurt</th>\n",
+              "      <td>177.0</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>553</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Gaasperdam - Driemond</th>\n",
+              "      <td>98.0</td>\n",
+              "      <td>85.0</td>\n",
+              "      <td>44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Geuzenveld - Slotermeer</th>\n",
+              "      <td>127.0</td>\n",
+              "      <td>112.0</td>\n",
+              "      <td>83</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>IJburg - Zeeburgereiland</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>142.0</td>\n",
+              "      <td>160</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Noord-Oost</th>\n",
+              "      <td>139.0</td>\n",
+              "      <td>117.0</td>\n",
+              "      <td>93</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Noord-West</th>\n",
+              "      <td>129.0</td>\n",
+              "      <td>122.0</td>\n",
+              "      <td>136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Oostelijk Havengebied - Indische Buurt</th>\n",
+              "      <td>142.0</td>\n",
+              "      <td>125.0</td>\n",
+              "      <td>205</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Osdorp</th>\n",
+              "      <td>124.0</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>36</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Oud-Noord</th>\n",
+              "      <td>180.0</td>\n",
+              "      <td>129.0</td>\n",
+              "      <td>251</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Oud-Oost</th>\n",
+              "      <td>156.0</td>\n",
+              "      <td>140.0</td>\n",
+              "      <td>313</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Slotervaart</th>\n",
+              "      <td>111.0</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>101</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Watergraafsmeer</th>\n",
+              "      <td>165.0</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>147</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Westerpark</th>\n",
+              "      <td>162.0</td>\n",
+              "      <td>135.0</td>\n",
+              "      <td>371</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Zuid</th>\n",
+              "      <td>187.0</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>366</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-21fc469a-f28f-4222-849c-5e70aa22a129')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-21fc469a-f28f-4222-849c-5e70aa22a129 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-21fc469a-f28f-4222-849c-5e70aa22a129');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_price_2 = df_airbnb.pivot_table(\n",
         "    index=['neighbourhood', 'name', 'room_type'],\n",
         ").reset_index()\n",
@@ -572,7 +879,7 @@
         "id": "B1yY9EAHLlyF",
         "outputId": "ed89f17c-aaa2-4a87-fcdd-a80359870354"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
