--- a/exercise_class2.ipynb
+++ b/exercise_class2.ipynb
@@ -6,7 +6,7 @@
       "name": "exercise_class2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbiO2DYe42m4oTRKJEfZu7",
+      "authorship_tag": "ABX9TyN/k4kj2Yh7lVIWqZnmYXTY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/matiascabrejos/IA-Humai/blob/main/exercise_class2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests"
+      ],
+      "metadata": {
+        "id": "dgKcnzHpGZSK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
