--- a/exercise2_class4.ipynb
+++ b/exercise2_class4.ipynb
@@ -6,7 +6,7 @@
       "name": "exercise2_class4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNAuBTKIo6mnbcTfO1KIPqS",
+      "authorship_tag": "ABX9TyNWGnmly3+ZsDSYQjcSUpjt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "zftZjQ1nDYbp"
       },
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "GvpWT5M0EEJk"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "id": "6nG_JSVzEPVq",
         "outputId": "500e64bc-832c-4d30-8514-2dbb579697ee"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "ygOeWFSrE1jE"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
         "id": "UMJUMu1eGDRx",
         "outputId": "f8a3ea73-c844-4347-bda7-ae08b9a912b2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "sAAR-w_NOUd_"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +529,7 @@
       "metadata": {
         "id": "xyUB7cZmNgGV"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "qj5ltiWgNpJY"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +557,7 @@
         "id": "PVDQZtF2OuaJ",
         "outputId": "ccdb952e-6e97-4ad3-a7a2-35dc12d5ca3b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,6 +791,17 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dolar_df[dolar_df.Apertura == 'Nivel general'].Indice.plot(style='-o', linewidth=2, ms=4, figsize = (20, 5))"
+      ],
+      "metadata": {
+        "id": "VPzcwQdvWoF0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
