--- a/repaso_2.ipynb
+++ b/repaso_2.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNkMBicZjS2R974Fak9ak0w",
+      "authorship_tag": "ABX9TyOG+7c3IisgBmX+/F9l2ajp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dFkxO2u0aTku",
-        "outputId": "72123460-1695-41e1-a1a5-1fda46ff8a75"
+        "outputId": "ed257b2b-72b5-4a7a-a5d4-576b4835b989"
       },
       "execution_count": 3,
       "outputs": [
@@ -71,16 +71,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-05-20 02:05:38--  https://unket.s3.sa-east-1.amazonaws.com/data/fifa.csv\n",
-            "Resolving unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)... 52.95.164.31\n",
-            "Connecting to unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)|52.95.164.31|:443... connected.\n",
+            "--2022-05-21 02:10:29--  https://unket.s3.sa-east-1.amazonaws.com/data/fifa.csv\n",
+            "Resolving unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)... 52.95.163.126\n",
+            "Connecting to unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)|52.95.163.126|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2989091 (2.9M) [text/csv]\n",
             "Saving to: ‘fifa.csv’\n",
             "\n",
-            "fifa.csv            100%[===================>]   2.85M  3.17MB/s    in 0.9s    \n",
+            "fifa.csv            100%[===================>]   2.85M  2.11MB/s    in 1.3s    \n",
             "\n",
-            "2022-05-20 02:05:40 (3.17 MB/s) - ‘fifa.csv’ saved [2989091/2989091]\n",
+            "2022-05-21 02:10:31 (2.11 MB/s) - ‘fifa.csv’ saved [2989091/2989091]\n",
             "\n"
           ]
         }
@@ -108,7 +108,7 @@
           "height": 404
         },
         "id": "bsuEKSqBadNK",
-        "outputId": "8b99bb2f-5860-46bc-860f-5e29d9c391a7"
+        "outputId": "0176bc54-2885-422a-e3fc-75d3519ad5e1"
       },
       "execution_count": 5,
       "outputs": [
@@ -162,7 +162,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ca1de34d-0b3b-4fd7-8bea-1b65da5696a3\">\n",
+              "  <div id=\"df-474c7569-fd30-43a9-8e85-8caba0b02826\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -330,7 +330,7 @@
               "</table>\n",
               "<p>5 rows × 62 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca1de34d-0b3b-4fd7-8bea-1b65da5696a3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-474c7569-fd30-43a9-8e85-8caba0b02826')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -381,12 +381,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ca1de34d-0b3b-4fd7-8bea-1b65da5696a3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-474c7569-fd30-43a9-8e85-8caba0b02826 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ca1de34d-0b3b-4fd7-8bea-1b65da5696a3');\n",
+              "          const element = document.querySelector('#df-474c7569-fd30-43a9-8e85-8caba0b02826');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -420,7 +420,7 @@
       ],
       "metadata": {
         "id": "lFYJlAlsz4MH",
-        "outputId": "117811d9-656e-4870-b4a4-8f7b78c54396",
+        "outputId": "1495458f-1c21-49eb-85c4-99784c2c7f26",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -449,7 +449,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O9mv4pYEU4GT",
-        "outputId": "edabce54-d8b5-4e25-f93f-c9dff070838c"
+        "outputId": "dc1964f0-04e7-464b-bdd6-c8a92e814635"
       },
       "execution_count": 7,
       "outputs": [
@@ -500,7 +500,7 @@
           "height": 386
         },
         "id": "0ygWJHHQViOO",
-        "outputId": "9f62fac7-d0b3-4dce-80c4-2c322ddcecb5"
+        "outputId": "4477c43e-6364-43fb-ceca-d1d24b41eba0"
       },
       "execution_count": 9,
       "outputs": [
@@ -547,7 +547,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c402a3b8-d8d0-43d0-84b3-be884f15baa5\">\n",
+              "  <div id=\"df-410175a1-62c0-491e-90a5-3d0a3c47133b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -715,7 +715,7 @@
               "</table>\n",
               "<p>5 rows × 62 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c402a3b8-d8d0-43d0-84b3-be884f15baa5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-410175a1-62c0-491e-90a5-3d0a3c47133b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -766,12 +766,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c402a3b8-d8d0-43d0-84b3-be884f15baa5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-410175a1-62c0-491e-90a5-3d0a3c47133b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c402a3b8-d8d0-43d0-84b3-be884f15baa5');\n",
+              "          const element = document.querySelector('#df-410175a1-62c0-491e-90a5-3d0a3c47133b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -822,7 +822,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ieOhvgeUad0t",
-        "outputId": "de1676e9-1c40-4ed1-e454-ffd03558218c"
+        "outputId": "34a4a5a9-e88c-4379-d9b9-b2949812e31c"
       },
       "execution_count": 11,
       "outputs": [
@@ -846,10 +846,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 449
+          "height": 377
         },
         "id": "6A5AaCxKWvbb",
-        "outputId": "5aa17d16-22c2-44be-d7bb-dbefb36168ec"
+        "outputId": "af439cb7-d95e-4f31-c244-2a30779c63e0"
       },
       "execution_count": 12,
       "outputs": [
@@ -897,7 +897,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2fd15d9b-7f5d-4922-a4ea-fd29469c1e87\">\n",
+              "  <div id=\"df-4fd3d3d0-3e6e-45aa-b6c6-8a9549870a84\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1113,7 +1113,7 @@
               "</table>\n",
               "<p>6 rows × 43 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2fd15d9b-7f5d-4922-a4ea-fd29469c1e87')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fd3d3d0-3e6e-45aa-b6c6-8a9549870a84')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1164,12 +1164,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2fd15d9b-7f5d-4922-a4ea-fd29469c1e87 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4fd3d3d0-3e6e-45aa-b6c6-8a9549870a84 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2fd15d9b-7f5d-4922-a4ea-fd29469c1e87');\n",
+              "          const element = document.querySelector('#df-4fd3d3d0-3e6e-45aa-b6c6-8a9549870a84');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1218,7 +1218,7 @@
           "height": 424
         },
         "id": "vrP8OaNKbsbQ",
-        "outputId": "400d4bbd-c69e-4adb-80d1-47dea63946af"
+        "outputId": "1ff8a8f1-06a5-48ff-8099-64dc819e62c2"
       },
       "execution_count": 14,
       "outputs": [
@@ -1256,7 +1256,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-88f260c8-e75a-4ed7-a256-95ccd7fa5862\">\n",
+              "  <div id=\"df-ddbee02f-1f43-4ff9-b0a9-2276e37d7786\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1388,7 +1388,7 @@
               "</table>\n",
               "<p>7999 rows × 6 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88f260c8-e75a-4ed7-a256-95ccd7fa5862')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ddbee02f-1f43-4ff9-b0a9-2276e37d7786')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1439,12 +1439,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-88f260c8-e75a-4ed7-a256-95ccd7fa5862 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ddbee02f-1f43-4ff9-b0a9-2276e37d7786 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-88f260c8-e75a-4ed7-a256-95ccd7fa5862');\n",
+              "          const element = document.querySelector('#df-ddbee02f-1f43-4ff9-b0a9-2276e37d7786');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1474,12 +1474,38 @@
     {
       "cell_type": "code",
       "source": [
+        "more_df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ptWIUqrTYRFT",
+        "outputId": "1240a8a4-bf29-441a-c144-7131e5fd9517"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Name', 'Age', 'Nationality', 'Club', 'Position', 'Overall'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_filtrado = more_df.query('Overall > 80')"
       ],
       "metadata": {
         "id": "OdafDguab59Q"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1501,9 +1527,9 @@
           "height": 312
         },
         "id": "YSOuJJ1BdNcY",
-        "outputId": "d551f4f6-40b9-448f-ce41-a1add2683faf"
+        "outputId": "c55f8462-1a74-4044-e7e5-f6a35a189827"
       },
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1513,7 +1539,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -1544,9 +1570,9 @@
           "height": 287
         },
         "id": "3FX8pcqOeNx1",
-        "outputId": "5d1a97a3-efaf-4dc6-bc68-c3eb06af60d4"
+        "outputId": "6b544a8d-0fd6-4386-c620-9bd8aeaf0440"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1556,7 +1582,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
