--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPooLKJEKcwwUjWpL/7Gmta",
+      "authorship_tag": "ABX9TyNj0B5KsN7+H+/zrnMBqxHG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "u8Kx2LvtCpV6"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "905BirLmB1eC"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -61,9 +61,9 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "9d44e070-ff00-4e32-f59c-e851421b4e27"
+        "outputId": "691050a4-43c2-483d-f8ca-5c5c1f22a0e9"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3fe46c64-c5a3-461a-b331-6fb24f60d0d3\">\n",
+              "  <div id=\"df-1bb213af-fd8b-448e-9b33-4fc544848762\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3fe46c64-c5a3-461a-b331-6fb24f60d0d3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1bb213af-fd8b-448e-9b33-4fc544848762')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3fe46c64-c5a3-461a-b331-6fb24f60d0d3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1bb213af-fd8b-448e-9b33-4fc544848762 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3fe46c64-c5a3-461a-b331-6fb24f60d0d3');\n",
+              "          const element = document.querySelector('#df-1bb213af-fd8b-448e-9b33-4fc544848762');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -356,9 +356,9 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "8d669589-5318-409d-b500-81a175b41323"
+        "outputId": "ce6c5aa0-62a2-4eb5-8467-7a6c03de7a83"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f2e72ed2-ea29-48bd-addf-e1db4b9e68eb\">\n",
+              "  <div id=\"df-ed4a7282-304d-45a2-bcb9-48d930c8f961\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f2e72ed2-ea29-48bd-addf-e1db4b9e68eb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed4a7282-304d-45a2-bcb9-48d930c8f961')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f2e72ed2-ea29-48bd-addf-e1db4b9e68eb button.colab-df-convert');\n",
+              "          document.querySelector('#df-ed4a7282-304d-45a2-bcb9-48d930c8f961 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f2e72ed2-ea29-48bd-addf-e1db4b9e68eb');\n",
+              "          const element = document.querySelector('#df-ed4a7282-304d-45a2-bcb9-48d930c8f961');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -646,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -661,9 +661,9 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "ca435401-21cf-425d-aec0-c61516653a82"
+        "outputId": "d9ffc6fe-58c7-4db0-9bf9-676c1908dad3"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e3a1dce0-801e-4232-ad43-a42e6adc3497\">\n",
+              "  <div id=\"df-aea7e51c-33c7-4019-bde4-88ecd64afce9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e3a1dce0-801e-4232-ad43-a42e6adc3497')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aea7e51c-33c7-4019-bde4-88ecd64afce9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e3a1dce0-801e-4232-ad43-a42e6adc3497 button.colab-df-convert');\n",
+              "          document.querySelector('#df-aea7e51c-33c7-4019-bde4-88ecd64afce9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e3a1dce0-801e-4232-ad43-a42e6adc3497');\n",
+              "          const element = document.querySelector('#df-aea7e51c-33c7-4019-bde4-88ecd64afce9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1093,7 +1093,59 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 100').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hhg1_cazvgj4",
+        "outputId": "079fad1c-946e-4fa8-d4f3-e2c9c1dd84e7"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4233, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 200').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_hg4zSqtv2nd",
+        "outputId": "5067ed4b-e445-4a06-9e3e-02572f62fdf2"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1381, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
